--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,13 @@
     "48": "icon.png",
     "128": "icon.png"
   },
-  "version": "0.5",
+  "version": "0.1",
   "content_scripts": [{
     "js": ["background.js"],
     "matches": ["<all_urls>"],
     "run_at":    "document_start",
+    "exclude_matches": [
+      "https://*.youtube.com/*"
+    ]
   }]
 }
