added Cron job for invidious_pinger

--- a/.github/workflows/invidious_pinger.yml
+++ b/.github/workflows/invidious_pinger.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt  # Adjust if needed
+          pip install -r requirements.txt
 
       - name: Run Invidious Pinger
         run: |
