--- a/.github/workflows/invidious_pinger.yml
+++ b/.github/workflows/invidious_pinger.yml
@@ -2,7 +2,7 @@ name: Invidious Pinger
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: '*/5 * * * *'
 
 jobs:
   run_pinger:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
